Fix a bug where on Firefox videos could have a huge "marge-left".

--- a/source/css/_common/_core/base.styl
+++ b/source/css/_common/_core/base.styl
@@ -82,4 +82,6 @@ dd {
 video {
   display block
   width 100%
+  float left
+  clear both
 }
